apps/OrderService/orderservice-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      service: orderservice
      type: api
  template:
    metadata:
      labels:
        service: orderservice
        type: api
    spec:
      containers:
      - name: orderservice-container
        image: anthonyhuebers/orderservice:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /hc
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 3
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: database-credentials
          mountPath: "/app/credentials"
        - name: agents-configuration
          mountPath: "/app/configuration"
      volumes:
      - name: database-credentials
        secret:
          secretName: orderservice-database-credentials
          items:
          - key: database.json
            path: database.json
      - name: agents-configuration
        configMap:
          name: orderservice-agents-configuration

---

apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: orderservice-api
spec:
  ports:
    - port: 80
  selector:
    service: orderservice
    type: api
