apps/OrderService/orderservice-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: orderservice
      type: db
  template:
    metadata:
      name: orderservice-db
      labels:
        service: orderservice
        type: db
    spec:
      containers:
      - name: orderservice-database-container
        image: mysql
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: persistentstorage
      volumes:
        - name: persistentstorage 
          persistentVolumeClaim:
            claimName: orderservice-db
        
---

kind: Service
apiVersion: v1
metadata:
  name: orderservice-db
spec:
  ports:
    - port: 3306
  selector:
    service: orderservice
    type: db
